2014-05-15  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlutils.c:
	Fix parsing of lineThrough decoration attribute (Animation013.xml)
	(This was a regression from ttmlparse)

2014-05-15  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlutils.c: (gst_ttml_utils_enum_parse_func):
	Fix parsing of attributes with trailing whitespace (Animation006.xml)
	(This was a regression from ttmlparse)

2014-05-15  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_build_layouts):
	Support for the tts:display attribute in ttmlrender. This was already
	present in ttmlparse.

2014-05-15  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_render_outline):
	Enlarge blur temporary surface so the blur radius fits in it (fixes
	truncated blurs on small fonts)

2014-05-15  Xavi Artigas  <xartigas@fluendo.com>

	* configure.ac:
	* src/Makefile.am:
	* src/gstttmlblur.c: (gst_ttml_blur_create_gaussian_kernel),
	(gst_ttml_blur_image_surface):
	* src/gstttmlblur.h:
	* src/gstttmlrender.c: (gst_ttmlrender_render_outline),
	(gst_ttmlrender_show_regions):
	* win32/vs10/libgstfluttml_sdk.vcxproj:
	* win32/vs10/libgstfluttml_sdk.vcxproj.filters:
	Support for blurred outline. This is a direct implementation without any
	optimization. Blur kernels are calculated every time, which might be cached.
	Also, a simple downscale+upscale will be much faster. This one, however,
	looks super cool.

2014-05-14  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c:
	(gst_ttml_attribute_parse_color_expression),
	(gst_ttml_attribute_normalize_length), (gst_ttml_attribute_parse):
	* src/gstttmlattribute.h:
	* src/gstttmlbase.c: (gst_ttmlbase_sax2_element_start_ns):
	* src/gstttmlrender.c: (gst_ttmlrender_new_region):
	Allow outline thickness to be specified in relative units.

2014-05-14  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_new_region):
	Fix writing to the main (default) region when other regions are